# python-random-name-generator

./: README.md  requirements.txt  setup.cfg
random_name_generator/: __init__.py  cli.py  constants.py  errors.py  generators.py  selectors.py  shortcuts.py  utils.py
rng/: __init__.py
tests/: conftest.py  test_cli.py  test_generators.py  test_random_name_generator.py  test_rng.py  test_selectors.py
tests/fixtures/: names.py
