[metadata]
name = python-random-name-generator
version = 0.0.2
author = Vitaliy Diachkov
author_email = diachkovspecial@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/vitaliy-diachkov/python-random-name-generator

[options]
packages = random_name_generator
