[metadata]
name = python-random-name-generator
version = 0.0.3
author = Vitaliy Diachkov
author_email = diachkovspecial@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/vitaliy-diachkov/python-random-name-generator

[options]
packages = random_name_generator

[options.entry_points]
console_scripts =
    generate-random-names = random_name_generator.cli:generate_random_names
